Free Manga Downloader
Project page: https://github.com/riderkick/FMD

Changelog:
(! = Important, + = Addition, - = Removal, * = Bug fix/Change/Edit, ? = Require feedback)

0.9.131.0 (xx-xx-2018)
[+] Added LHTranslation [EN-SC]
[+] Added ChampionScans [EN-SC]
[+] Added Mangaf [AR]
[+] Added WieManga [DE]
[+] Added MangaTube [DE]
[+] Added AtelierDuNoir [EN-SC]
[+] Added MangaDex [EN]
[+] Added MangaHub [RU]
[+] Added Turkish translation by Tmp341
[+] Added WebP codec library (libwebp)
[+] Enabled high DPI awareness
[*] MangaTown, exclude ads page
[*] MangaChan, fix domain
[*] UnionMangas, fix download
[*] Update localization [EN, RU]
[*] Various changes and bug fixes
Full changes: https://github.com/riderkick/FMD/compare/0.9.130.0...0.9.131.0

0.9.130.0 (23-01-2018)
[+] Added transfer favorites
[+] Added rename favorites
[+] Added Subapics [ID]
[+] Added MangaDesu [ID]
[+] Added MangaKita [ID]
[+] Added Whiteoutscans [EN-SC]
[+] Added DokiFansubs [EN-SC]
[*] NineManga: fixed all
[*] MangaInn: fixed all
[*] MangaLife: fixed domain
[*] MangaId: fixed download
[*] Madokami: fixed chapter title
[*] Jaiminisbox: fixed downoad
[*] MangaPark: fixed title
[*] Tsumanga: fixed update list
[*] Kumanga: fixed all
[*] RawSenManga: fixed all
[*] SenManga: fixed all
[*] Various changes and bug fixes
Full changes: https://github.com/riderkick/FMD/compare/0.9.129.0...0.9.130.0

0.9.129.0 (02-01-2018)
[*] MangaGo: fixed download
Full changes: https://github.com/riderkick/FMD/compare/0.9.128.0...0.9.129.0

0.9.128.0 (15-12-2017)
Full changes: https://github.com/riderkick/FMD/compare/0.9.127.0...0.9.128.0

0.9.127.0 (19-11-2017)
[*] MangaFox, MangaHere: exclude ads page
Full changes: https://github.com/riderkick/FMD/compare/0.9.126.0...0.9.127.0

0.9.126.0 (29-08-2017)
[*] Madokami: fixed update list
[*] Fixed download issue with some website
[*] Various changes and bug fixes
Full changes: https://github.com/riderkick/FMD/compare/0.9.125.0...0.9.126.0

0.9.125.0 (26-08-2017)