@@ -4,7 +4,7 @@ DBDownloadURL=https://sourceforge.net/projects/newfmd/files/data/<website>.7z/do
 
 [available]
 Arabic=GManga,MangaAe,MangaAr,MangaAt,Mangaf
-English=AnimeA,Authrone,Batoto,EatManga,EyeOnManga,FunManga,GoManga,GoodManga,HeyManga,KissManga,KivManga,Madokami,MangaBackup,MangaCool,Mangadex,MangaEden,MangaFox,MangaGo,MangaHere,MangaHome,MangaIce,MangaInn,MangaLife,MangaPanda,MangaPark,MangaReader,MangaSaurus,MangaSee,MangaSpy,MangaStreamTo,MangaTown,MangaTraders,MangaOnlineTo,MangaSail,MangaTail,MyMangaMe,NineManga,OneManga,ReadMangaToday,ReadComicOnline,SenManga,UnixManga,Webtoons,ReadComics,Taadd
+English=AnimeA,Authrone,Batoto,EatManga,EyeOnManga,FunManga,GoManga,GoodManga,HeyManga,KissManga,KivManga,Madokami,MangaBackup,MangaCool,Mangadex,MangaEden,MangaFox,MangaGo,MangaHere,MangaHome,MangaIce,MangaInn,MangaLife,MangaPanda,MangaPark,MangaReader,MangaRock,MangaSaurus,MangaSee,MangaSpy,MangaStreamTo,MangaTown,MangaTraders,MangaOnlineTo,MangaSail,MangaTail,MyMangaMe,NineManga,OneManga,ReadMangaToday,ReadComicOnline,SenManga,UnixManga,Webtoons,ReadComics,Taadd
 Italian=MangaEden_IT,NineMangaIT
 English-Scanlation=AtelierDuNoir,ChampionScans,DokiFansubs,Dynasty-Scans,EGScans,FallenAngelsScans,GameofScanlation,HelveticaScans,LHTranslation,Mangacow,MangaStream,MangaZuki,OneTimeScans,S2Scans,SenseScans,Shoujosense,TripleSevenScan,Jaiminisbox,PowerManga,KireiCake,WhiteoutScans
 French=AnimeStory,Japan-Shin,Japscan,Lecture-En-Ligne,ScanManga
